import SwiftUI

extension View {
    @ViewBuilder func oakAlert(
        title: String = "Ops ...",
        message: String = "Try again",
        buttonTitle: String = "Ok",
        isPresented: Binding<Bool>,
        onDismiss: @escaping () -> ()
    ) -> some View {
        self.modifier(PokemonErrorView(
            title: title,
            message: message,
...
